--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -1052,6 +1052,7 @@
 	"saved-qry-name": "Name",
 	"SCRUM_MASTER": "Scrum Master",
 	"SCRUM_MASTER_SHORT": "Scrum Master",
+	"search-by-spec-test": "Stellenbeschreibung hier einfügen oder eingeben…\n\nBeispiel:\n\nSenior Dutch speaking Java developer in Amsterdam with Spring and Angular",
 	"Show": "Anzeigen",
 	"show-filters": "Filter anzeigen",
 	"show-options": "Optionen anzeigen",
