--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -1052,6 +1052,7 @@
 	"saved-qry-name": "Nome",
 	"SCRUM_MASTER": "Scrum Master",
 	"SCRUM_MASTER_SHORT": "Scrum Master",
+	"search-by-spec-test": "Incolla o digita qui il testo delle specifiche del lavoro...\n\nEsempio:\n\nSenior Dutch speaking Java developer in Amsterdam with Spring and Angular",
 	"Show": "Mostrare",
 	"show-filters": "Mostra filtri",
 	"show-options": "Mostra opzioni",
