--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -1052,6 +1052,7 @@
 	"saved-qry-name": "Naam",
 	"SCRUM_MASTER": "Scrum Master",
 	"SCRUM_MASTER_SHORT": "Scrum Master",
+	"search-by-spec-test": "Plak of typ hier de functieomschrijving…\n\nVoorbeeld:\n\nSenior Dutch speaking Java developer in Amsterdam with Spring and Angular",
 	"Show": "Laten zien",
 	"show-filters": "Filters weergeven",
 	"show-options": "Opties weergeven",
