--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -1052,6 +1052,7 @@
 	"saved-qry-name": "Nom",
 	"SCRUM_MASTER": "Scrum Master",
 	"SCRUM_MASTER_SHORT": "Scrum Master",
+	"search-by-spec-test": "\nCollez ou saisissez ici le texte de la description de poste…\n\nExemple :\n\nSenior Dutch speaking Java developer in Amsterdam with Spring and Angular",
 	"Show": "Montre",
 	"show-filters": "Afficher les filtres",
 	"show-options": "Afficher les options",
