--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -785,11 +785,14 @@
 	"BULGARIA": "Bulgarien",
 	"BULGARIAN": "Bulgarisch",
 	"CANADA": "Kanada",
+	"cancel-btn": "Stornieren",
 	"ccplusplus": "C/C++",
 	"CCPLUSPLUS": "C/C++",
 	"CENTRAL_EUROPE": "Mitteleuropa",
 	"cobol": "COBOL",
 	"COBOL": "COBOL",
+	"confirm-box-header": "Bestätigen",
+	"confirm-btn": "Bestätigen",
 	"CONSTRUCTION": "Konstruktion",
 	"create-candidate--profile-image": "Es gab ein Problem mit dem Profilbild",
 	"create-candidate-cv-format": "Der Lebenslauf muss im Word- oder PDF-Format vorliegen und kleiner als 1 MB sein",
