--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -785,11 +785,14 @@
 	"BULGARIA": "Bulgaria",
 	"BULGARIAN": "Bulgarian",
 	"CANADA": "Canada",
+	"cancel-btn": "Cancel",
 	"ccplusplus": "C/C++",
 	"CCPLUSPLUS": "C/C++",
 	"CENTRAL_EUROPE": "Central Europe",
 	"cobol": "COBOL",
 	"COBOL": "COBOL",
+	"confirm-box-header": "Confirm",
+	"confirm-btn": "Confirm",
 	"CONSTRUCTION": "Construction",
 	"create-candidate--profile-image": "There was an issue with the profile image",
 	"create-candidate-cv-format": "CV must be Word or PDF and less than 1MB",
