--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -352,7 +352,7 @@
 	"arenella-recruiter-account-company-name": "Nombre de empresa",
 	"arenella-recruiter-account-detail-invoice-warn": "Advertencia",
 	"arenella-recruiter-account-detail-invoice-warn-desc": "Hay una factura pendiente. El acceso al sistema está suspendido temporalmente hasta que se haya pagado la factura.",
-	"arenella-recruiter-account-detail-payment-btn-back": "Atrás",
+	"arenella-recruiter-account-detail-payment-btn-back": "",
 	"arenella-recruiter-account-detail-payment-btn-confirm": "Confirmar",
 	"arenella-recruiter-account-detail-payment-company-address": "Dirección de la empresa",
 	"arenella-recruiter-account-detail-payment-company-country": "Empresa País",
@@ -785,11 +785,14 @@
 	"BULGARIA": "Bulgaria",
 	"BULGARIAN": "Búlgaro",
 	"CANADA": "Canadá",
+	"cancel-btn": "Cancelar",
 	"ccplusplus": "C/C++",
 	"CCPLUSPLUS": "C/C++",
 	"CENTRAL_EUROPE": "Europa Central",
 	"cobol": "COBOL",
 	"COBOL": "COBOL",
+	"confirm-box-header": "Confirmar",
+	"confirm-btn": "Confirmar",
 	"CONSTRUCTION": "Construcción",
 	"create-candidate--profile-image": "Hubo un problema con la imagen de perfil.",
 	"create-candidate-cv-format": "El CV debe ser en formato Word o PDF y tener un tamaño inferior a 1 MB.",
