--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -352,7 +352,7 @@
 	"arenella-recruiter-account-company-name": "Nom de l'entreprise",
 	"arenella-recruiter-account-detail-invoice-warn": "Avertissement",
 	"arenella-recruiter-account-detail-invoice-warn-desc": "Il y a une facture impayée. L'accès au système est temporairement suspendu jusqu'au paiement de la facture.",
-	"arenella-recruiter-account-detail-payment-btn-back": "Retour",
+	"arenella-recruiter-account-detail-payment-btn-back": "",
 	"arenella-recruiter-account-detail-payment-btn-confirm": "Confirmer",
 	"arenella-recruiter-account-detail-payment-company-address": "Adresse de la société",
 	"arenella-recruiter-account-detail-payment-company-country": "Pays de l’entreprise",
@@ -785,11 +785,14 @@
 	"BULGARIA": "Bulgarie",
 	"BULGARIAN": "Bulgare",
 	"CANADA": "Canada",
+	"cancel-btn": "Annuler",
 	"ccplusplus": "C/C++",
 	"CCPLUSPLUS": "C/C++",
 	"CENTRAL_EUROPE": "Europe centrale",
 	"cobol": "COBOL",
 	"COBOL": "COBOL",
+	"confirm-box-header": "Confirmer",
+	"confirm-btn": "Confirmer",
 	"CONSTRUCTION": "Construction",
 	"create-candidate--profile-image": "Il y a eu un problème avec l'image de profil",
 	"create-candidate-cv-format": "Le CV doit être Word ou PDF et moins de 1 Mo",
