--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -352,7 +352,7 @@
 	"arenella-recruiter-account-company-name": "Nome della ditta",
 	"arenella-recruiter-account-detail-invoice-warn": "Avvertimento",
 	"arenella-recruiter-account-detail-invoice-warn-desc": "C'è una fattura in sospeso. L'accesso al sistema è temporaneamente sospeso finché la fattura non è stata pagata.",
-	"arenella-recruiter-account-detail-payment-btn-back": "Indietro",
+	"arenella-recruiter-account-detail-payment-btn-back": "",
 	"arenella-recruiter-account-detail-payment-btn-confirm": "Confermare",
 	"arenella-recruiter-account-detail-payment-company-address": "Indirizzo aziendale",
 	"arenella-recruiter-account-detail-payment-company-country": "Paese dell'azienda",
@@ -785,11 +785,14 @@
 	"BULGARIA": "Bulgaria",
 	"BULGARIAN": "Bulgaro",
 	"CANADA": "Canada",
+	"cancel-btn": "Annulla",
 	"ccplusplus": "C/C++",
 	"CCPLUSPLUS": "C/C++",
 	"CENTRAL_EUROPE": "Europa centrale",
 	"cobol": "COBOL",
 	"COBOL": "COBOL",
+	"confirm-box-header": "Confermare",
+	"confirm-btn": "Confermare",
 	"CONSTRUCTION": "Costruzione",
 	"create-candidate--profile-image": "Si è verificato un problema con l'immagine del profilo",
 	"create-candidate-cv-format": "Il CV deve essere in formato Word o PDF e di dimensioni inferiori a 1 MB",
