--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -352,7 +352,7 @@
 	"arenella-recruiter-account-company-name": "Bedrijfsnaam",
 	"arenella-recruiter-account-detail-invoice-warn": "Waarschuwing",
 	"arenella-recruiter-account-detail-invoice-warn-desc": "Er is een openstaande factuur. De toegang tot het systeem wordt tijdelijk opgeschort totdat de factuur is betaald.",
-	"arenella-recruiter-account-detail-payment-btn-back": "Terug",
+	"arenella-recruiter-account-detail-payment-btn-back": "",
 	"arenella-recruiter-account-detail-payment-btn-confirm": "Bevestigen",
 	"arenella-recruiter-account-detail-payment-company-address": "Bedrijfsadres",
 	"arenella-recruiter-account-detail-payment-company-country": "Bedrijfsland",
@@ -785,11 +785,14 @@
 	"BULGARIA": "Bulgarije",
 	"BULGARIAN": "Bulgaars",
 	"CANADA": "Canada",
+	"cancel-btn": "Annuleren",
 	"ccplusplus": "C/C++",
 	"CCPLUSPLUS": "C/C++",
 	"CENTRAL_EUROPE": "Centraal Europa",
 	"cobol": "COBOL",
 	"COBOL": "COBOL",
+	"confirm-box-header": "Bevestigen",
+	"confirm-btn": "Bevestigen",
 	"CONSTRUCTION": "Bouw",
 	"create-candidate--profile-image": "Er was een probleem met de profielafbeelding",
 	"create-candidate-cv-format": "CV moet Word of PDF zijn en minder dan 1 MB groot",
