notifications displaying in FE

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -786,6 +786,7 @@
 	"BULGARIAN": "Bulgarisch",
 	"CANADA": "Kanada",
 	"cancel-btn": "Stornieren",
+	"CANDIDATE": "Kandidat",
 	"ccplusplus": "C/C++",
 	"CCPLUSPLUS": "C/C++",
 	"CENTRAL_EUROPE": "Mitteleuropa",
@@ -982,6 +983,7 @@
 	"PROGRAMME_MANAGER": "Programme Manager",
 	"PROJECT_MANAGER": "Projektmanager",
 	"PROJECT_MANAGER_SHORT": "PM",
+	"public-chat-participant-type-recruiter": "Personalberater",
 	"python": "Python",
 	"PYTHON": "Python",
 	"QA_SHORT": "QA",
@@ -1028,6 +1030,7 @@
 	"rec-prof-sector-police-and-defence": "Polizei und Verteidigung",
 	"rec-prof-type-freelance-contract": "Freiberuflich/Vertragsarbeit",
 	"rec-prof-type-permanent-payroll": "Festanstellung/Gehaltsabrechnung",
+	"RECRUITER": "Personalberater",
 	"register-recruiter-failure": "Leider ist ein Problem aufgetreten. Bitte senden Sie für Ihr Konto eine E-Mail direkt an admin@arenella-ict",
 	"register-recruiter-failure-title": "Versagen",
 	"register-recruiter-success": "Ihre Anfrage wurde übermittelt. Nach der Annahme wird eine E-Mail mit Ihren Anmeldedaten gesendet.",
@@ -1115,6 +1118,7 @@
 	"SWEDEN": "Schweden",
 	"SWEDISH": "Schwedisch",
 	"SWITZERLAND": "Schweiz",
+	"SYSTEM": "Administrator",
 	"TELECOMS": "Telekommunikation",
 	"test-manager": "Test Manager",
 	"TEST_MANAGER": "Test Manager",
