--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -786,6 +786,7 @@
 	"BULGARIAN": "Bulgarian",
 	"CANADA": "Canada",
 	"cancel-btn": "Cancel",
+	"CANDIDATE": "Candidate",
 	"ccplusplus": "C/C++",
 	"CCPLUSPLUS": "C/C++",
 	"CENTRAL_EUROPE": "Central Europe",
@@ -982,6 +983,7 @@
 	"PROGRAMME_MANAGER": "Programme Manager",
 	"PROJECT_MANAGER": "Project Manager",
 	"PROJECT_MANAGER_SHORT": "PM",
+	"public-chat-participant-type-recruiter": "Recruiter",
 	"python": "Python",
 	"PYTHON": "Python",
 	"QA_SHORT": "QA",
@@ -1028,6 +1030,7 @@
 	"rec-prof-sector-police-and-defence": "Police and Defence",
 	"rec-prof-type-freelance-contract": "Freelance/Contract",
 	"rec-prof-type-permanent-payroll": "Permanent/Payroll",
+	"RECRUITER": "Recruiter",
 	"register-recruiter-failure": "Unfortunately there was a problem. Please email admin@arenella-ict.com directly for your account",
 	"register-recruiter-failure-title": "Failure",
 	"register-recruiter-success": "Your request has been submitted. Once accepted an email will be sent with your login details.",
@@ -1115,6 +1118,7 @@
 	"SWEDEN": "Sweeden",
 	"SWEDISH": "Swedish",
 	"SWITZERLAND": "Switzerland",
+	"SYSTEM": "Administrator",
 	"TELECOMS": "Telecoms",
 	"test-manager": "Test Manager",
 	"TEST_MANAGER": "Test Manager",
