--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -786,6 +786,7 @@
 	"BULGARIAN": "Búlgaro",
 	"CANADA": "Canadá",
 	"cancel-btn": "Cancelar",
+	"CANDIDATE": "Candidato",
 	"ccplusplus": "C/C++",
 	"CCPLUSPLUS": "C/C++",
 	"CENTRAL_EUROPE": "Europa Central",
@@ -982,6 +983,7 @@
 	"PROGRAMME_MANAGER": "Programme Manager",
 	"PROJECT_MANAGER": "Gerente de proyecto",
 	"PROJECT_MANAGER_SHORT": "PM",
+	"public-chat-participant-type-recruiter": "Reclutador",
 	"python": "Python",
 	"PYTHON": "Python",
 	"QA_SHORT": "QA",
@@ -1028,6 +1030,7 @@
 	"rec-prof-sector-police-and-defence": "Policía y defensa",
 	"rec-prof-type-freelance-contract": "Autónomo/Contrato",
 	"rec-prof-type-permanent-payroll": "Permanente/Nómina",
+	"RECRUITER": "Reclutador",
 	"register-recruiter-failure": "Lamentablemente, se produjo un problema. Envíe un correo electrónico directamente a admin@arenella-ict para obtener su cuenta.",
 	"register-recruiter-failure-title": "Falla",
 	"register-recruiter-success": "Su solicitud ha sido enviada. Una vez aceptada, se le enviará un correo electrónico con sus datos de acceso.",
@@ -1115,6 +1118,7 @@
 	"SWEDEN": "Suecia",
 	"SWEDISH": "Sueco",
 	"SWITZERLAND": "Suiza",
+	"SYSTEM": "Administrador",
 	"TELECOMS": "Telecomunicaciones",
 	"test-manager": "Test Manager",
 	"TEST_MANAGER": "Test Manager",
