--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -786,6 +786,7 @@
 	"BULGARIAN": "Bulgare",
 	"CANADA": "Canada",
 	"cancel-btn": "Annuler",
+	"CANDIDATE": "Candidat",
 	"ccplusplus": "C/C++",
 	"CCPLUSPLUS": "C/C++",
 	"CENTRAL_EUROPE": "Europe centrale",
@@ -982,6 +983,7 @@
 	"PROGRAMME_MANAGER": "Programme Manager",
 	"PROJECT_MANAGER": "Chef de projet",
 	"PROJECT_MANAGER_SHORT": "PM",
+	"public-chat-participant-type-recruiter": "Recruteur",
 	"python": "Python",
 	"PYTHON": "Python",
 	"QA_SHORT": "QA",
@@ -1028,6 +1030,7 @@
 	"rec-prof-sector-police-and-defence": "Police et Défense",
 	"rec-prof-type-freelance-contract": "Indépendant/Contrat",
 	"rec-prof-type-permanent-payroll": "Permanent/Paie",
+	"RECRUITER": "Recruteur",
 	"register-recruiter-failure": "Malheureusement, il y a eu un problème. Veuillez envoyer un e-mail à admin@arenella-ict directement pour votre compte",
 	"register-recruiter-failure-title": "Échec",
 	"register-recruiter-success": "Votre requête à bien été envoyée. Une fois accepté, un e-mail vous sera envoyé avec vos informations de connexion.",
@@ -1115,6 +1118,7 @@
 	"SWEDEN": "Suède",
 	"SWEDISH": "Suédois",
 	"SWITZERLAND": "Suisse",
+	"SYSTEM": "Administrateur",
 	"TELECOMS": "Télécoms",
 	"test-manager": "Test Manager",
 	"TEST_MANAGER": "Test Manager",
