--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -786,6 +786,7 @@
 	"BULGARIAN": "Bulgaro",
 	"CANADA": "Canada",
 	"cancel-btn": "Annulla",
+	"CANDIDATE": "Candidato",
 	"ccplusplus": "C/C++",
 	"CCPLUSPLUS": "C/C++",
 	"CENTRAL_EUROPE": "Europa centrale",
@@ -982,6 +983,7 @@
 	"PROGRAMME_MANAGER": "Programme Manager",
 	"PROJECT_MANAGER": "Responsabile del progetto",
 	"PROJECT_MANAGER_SHORT": "PM",
+	"public-chat-participant-type-recruiter": "Recruiter",
 	"python": "Python",
 	"PYTHON": "Python",
 	"QA_SHORT": "QA",
@@ -1028,6 +1030,7 @@
 	"rec-prof-sector-police-and-defence": "Polizia e Difesa",
 	"rec-prof-type-freelance-contract": "Libero professionista/Contratto",
 	"rec-prof-type-permanent-payroll": "Permanente/Libro paga",
+	"RECRUITER": "Recruiter",
 	"register-recruiter-failure": "Purtroppo si è verificato un problema. Invia un'e-mail direttamente a admin@arenella-ict per il tuo account",
 	"register-recruiter-failure-title": "Fallimento",
 	"register-recruiter-success": "La tua richiesta è stata inoltrata. Una volta accettata, ti verrà inviata un'e-mail con i tuoi dati di accesso.",
@@ -1115,6 +1118,7 @@
 	"SWEDEN": "Svezia",
 	"SWEDISH": "Svedese",
 	"SWITZERLAND": "Svizzera",
+	"SYSTEM": "Amministratore",
 	"TELECOMS": "Telecomunicazioni",
 	"test-manager": "Test Manager",
 	"TEST_MANAGER": "Test Manager",
