--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -786,6 +786,7 @@
 	"BULGARIAN": "Bulgaars",
 	"CANADA": "Canada",
 	"cancel-btn": "Annuleren",
+	"CANDIDATE": "Kandidaat",
 	"ccplusplus": "C/C++",
 	"CCPLUSPLUS": "C/C++",
 	"CENTRAL_EUROPE": "Centraal Europa",
@@ -982,6 +983,7 @@
 	"PROGRAMME_MANAGER": "Programme Manager",
 	"PROJECT_MANAGER": "Projectleider",
 	"PROJECT_MANAGER_SHORT": "PM",
+	"public-chat-participant-type-recruiter": "Recruiter",
 	"python": "Python",
 	"PYTHON": "Python",
 	"QA_SHORT": "QA",
@@ -1028,6 +1030,7 @@
 	"rec-prof-sector-police-and-defence": "Politie en Defensie",
 	"rec-prof-type-freelance-contract": "Freelance/contract",
 	"rec-prof-type-permanent-payroll": "Vast/salaris",
+	"RECRUITER": "Recruiter",
 	"register-recruiter-failure": "Helaas was er een probleem. Stuur een e-mail naar admin@arenella-ict rechtstreeks voor uw account",
 	"register-recruiter-failure-title": "Fout",
 	"register-recruiter-success": "Uw aanvraag is ingediend. Na acceptatie wordt er een e-mail verzonden met uw inloggegevens.",
@@ -1115,6 +1118,7 @@
 	"SWEDEN": "Zweden",
 	"SWEDISH": "Zweeds",
 	"SWITZERLAND": "Zwitserland",
+	"SYSTEM": "Beheerder",
 	"TELECOMS": "Telecom",
 	"test-manager": "Test Manager",
 	"TEST_MANAGER": "Test Manager",
