unit test fixes and translations

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -779,6 +779,7 @@
 	"AVIATION": "Luftfahrt",
 	"BA": "Business Analyst",
 	"BA_SHORT": "BA",
+	"BACK": "Zurück",
 	"BELGIUM": "Belgien",
 	"BENELUX": "Benelux",
 	"BRITISH_ISLES": "Britische Inseln",
@@ -790,6 +791,7 @@
 	"ccplusplus": "C/C++",
 	"CCPLUSPLUS": "C/C++",
 	"CENTRAL_EUROPE": "Mitteleuropa",
+	"CLOSE": "Schließen",
 	"cobol": "COBOL",
 	"COBOL": "COBOL",
 	"confirm-box-header": "Bestätigen",
@@ -969,6 +971,7 @@
 	"NORTHERN_IRELAND": "Nordirland",
 	"NORWAY": "Norwegen",
 	"NORWEGEN": "Norwegen",
+	"NOTIFICATIONS": "Benachrichtigungen",
 	"ONE_MONTH_SUBSCRIPTION": "1 Monat",
 	"PAKISTAN": "Pakistan",
 	"php": "PHP",
@@ -1035,6 +1038,8 @@
 	"register-recruiter-failure-title": "Versagen",
 	"register-recruiter-success": "Ihre Anfrage wurde übermittelt. Nach der Annahme wird eine E-Mail mit Ihren Anmeldedaten gesendet.",
 	"register-recruiter-success-title": "Erfolg",
+	"REPLIES": "Antworten ",
+	"REPLY": "Beantworten",
 	"REPUBLIC_OF_IRELAND": "Irland",
 	"RETAIL": "Einzelhandel",
 	"ROMANIA": "Rumänien",
@@ -1048,6 +1053,7 @@
 	"SALESFORCE": "Salesforce",
 	"sap": "SAP",
 	"SAP": "SAP",
+	"SAVE": "Speichern",
 	"saved-candidate-no-longer-available": "Kandidat nicht mehr verfügbar",
 	"saved-candidate-search-queries": "Suchanfragen",
 	"saved-qry-btn-create": "Erschaffe",
