--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -779,6 +779,7 @@
 	"AVIATION": "Aviación",
 	"BA": "Business Analyst",
 	"BA_SHORT": "BA",
+	"BACK": "Atrás",
 	"BELGIUM": "Bélgica",
 	"BENELUX": "Benelux",
 	"BRITISH_ISLES": "Islas Británicas",
@@ -790,6 +791,7 @@
 	"ccplusplus": "C/C++",
 	"CCPLUSPLUS": "C/C++",
 	"CENTRAL_EUROPE": "Europa Central",
+	"CLOSE": "Cerrar ",
 	"cobol": "COBOL",
 	"COBOL": "COBOL",
 	"confirm-box-header": "Confirmar",
@@ -969,6 +971,7 @@
 	"NORTHERN_IRELAND": "Irlanda del Norte",
 	"NORWAY": "Noruega",
 	"NORWEGEN": "Noruega",
+	"NOTIFICATIONS": "Notificaciones",
 	"ONE_MONTH_SUBSCRIPTION": "1 mes",
 	"PAKISTAN": "Pakistán",
 	"php": "PHP",
@@ -1035,6 +1038,8 @@
 	"register-recruiter-failure-title": "Falla",
 	"register-recruiter-success": "Su solicitud ha sido enviada. Una vez aceptada, se le enviará un correo electrónico con sus datos de acceso.",
 	"register-recruiter-success-title": "Éxito",
+	"REPLIES": "Respuestas",
+	"REPLY": "Responder ",
 	"REPUBLIC_OF_IRELAND": "Irlanda",
 	"RETAIL": "Venta",
 	"ROMANIA": "Rumania",
@@ -1048,6 +1053,7 @@
 	"SALESFORCE": "Salesforce",
 	"sap": "SAP",
 	"SAP": "SAP",
+	"SAVE": "Guardar",
 	"saved-candidate-no-longer-available": "El candidato ya no está disponible",
 	"saved-candidate-search-queries": "Búsquedas",
 	"saved-qry-btn-create": "Crear",
