--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -779,6 +779,7 @@
 	"AVIATION": "Aviation",
 	"BA": "Business Analyst",
 	"BA_SHORT": "BA",
+	"BACK": "Retour",
 	"BELGIUM": "Belgique",
 	"BENELUX": "Benelux",
 	"BRITISH_ISLES": "Îles Britanniques",
@@ -790,6 +791,7 @@
 	"ccplusplus": "C/C++",
 	"CCPLUSPLUS": "C/C++",
 	"CENTRAL_EUROPE": "Europe centrale",
+	"CLOSE": "Fermer ",
 	"cobol": "COBOL",
 	"COBOL": "COBOL",
 	"confirm-box-header": "Confirmer",
@@ -969,6 +971,7 @@
 	"NORTHERN_IRELAND": "Irlande du Nord",
 	"NORWAY": "Norvège",
 	"NORWEGEN": "Norvégien",
+	"NOTIFICATIONS": "Notifications",
 	"ONE_MONTH_SUBSCRIPTION": "1 mois",
 	"PAKISTAN": "Pakistan",
 	"php": "PHP",
@@ -1035,6 +1038,8 @@
 	"register-recruiter-failure-title": "Échec",
 	"register-recruiter-success": "Votre requête à bien été envoyée. Une fois accepté, un e-mail vous sera envoyé avec vos informations de connexion.",
 	"register-recruiter-success-title": "Succès",
+	"REPLIES": "Réponses",
+	"REPLY": "Répondre ",
 	"REPUBLIC_OF_IRELAND": "Irlande",
 	"RETAIL": "Vente",
 	"ROMANIA": "Roumanie",
@@ -1048,6 +1053,7 @@
 	"SALESFORCE": "Salesforce",
 	"sap": "SAP",
 	"SAP": "SAP",
+	"SAVE": "Enregistrer",
 	"saved-candidate-no-longer-available": "Le candidat n'est plus disponible",
 	"saved-candidate-search-queries": "Recherches",
 	"saved-qry-btn-create": "Créer",
