--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -779,6 +779,7 @@
 	"AVIATION": "Aviazione",
 	"BA": "Business Analyst",
 	"BA_SHORT": "BA",
+	"BACK": "Indietro",
 	"BELGIUM": "Belgio",
 	"BENELUX": "Benelux",
 	"BRITISH_ISLES": "Isole Britanniche",
@@ -790,6 +791,7 @@
 	"ccplusplus": "C/C++",
 	"CCPLUSPLUS": "C/C++",
 	"CENTRAL_EUROPE": "Europa centrale",
+	"CLOSE": "Chiudi ",
 	"cobol": "COBOL",
 	"COBOL": "COBOL",
 	"confirm-box-header": "Confermare",
@@ -969,6 +971,7 @@
 	"NORTHERN_IRELAND": "Irlanda del Nord",
 	"NORWAY": "Norvegia",
 	"NORWEGEN": "Norvegia",
+	"NOTIFICATIONS": "Notifiche",
 	"ONE_MONTH_SUBSCRIPTION": "1 mese",
 	"PAKISTAN": "Pakistan",
 	"php": "PHP",
@@ -1035,6 +1038,8 @@
 	"register-recruiter-failure-title": "Fallimento",
 	"register-recruiter-success": "La tua richiesta è stata inoltrata. Una volta accettata, ti verrà inviata un'e-mail con i tuoi dati di accesso.",
 	"register-recruiter-success-title": "Successo",
+	"REPLIES": "Risposte ",
+	"REPLY": "Rispondi ",
 	"REPUBLIC_OF_IRELAND": "Irlanda",
 	"RETAIL": "Commercio ",
 	"ROMANIA": "Romania",
@@ -1048,6 +1053,7 @@
 	"SALESFORCE": "Salesforce",
 	"sap": "SAP",
 	"SAP": "SAP",
+	"SAVE": "Salva",
 	"saved-candidate-no-longer-available": "Candidato non più disponibile",
 	"saved-candidate-search-queries": "Ricercas",
 	"saved-qry-btn-create": "Crea",
