--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -779,6 +779,7 @@
 	"AVIATION": "Luchtvaart",
 	"BA": "Business Analyst",
 	"BA_SHORT": "BA",
+	"BACK": "Terug",
 	"BELGIUM": "België",
 	"BENELUX": "Benelux",
 	"BRITISH_ISLES": "Britse eilanden",
@@ -790,6 +791,7 @@
 	"ccplusplus": "C/C++",
 	"CCPLUSPLUS": "C/C++",
 	"CENTRAL_EUROPE": "Centraal Europa",
+	"CLOSE": "Sluiten",
 	"cobol": "COBOL",
 	"COBOL": "COBOL",
 	"confirm-box-header": "Bevestigen",
@@ -969,6 +971,7 @@
 	"NORTHERN_IRELAND": "Noord-Ierland",
 	"NORWAY": "Noorwegen",
 	"NORWEGEN": "Noorwegen",
+	"NOTIFICATIONS": "Meldingen",
 	"ONE_MONTH_SUBSCRIPTION": "1 maand",
 	"PAKISTAN": "Pakistan",
 	"php": "PHP",
@@ -1035,6 +1038,8 @@
 	"register-recruiter-failure-title": "Fout",
 	"register-recruiter-success": "Uw aanvraag is ingediend. Na acceptatie wordt er een e-mail verzonden met uw inloggegevens.",
 	"register-recruiter-success-title": "Succes",
+	"REPLIES": "Reacties",
+	"REPLY": "Beantworten",
 	"REPUBLIC_OF_IRELAND": "Ierland",
 	"RETAIL": "Detailhandel",
 	"ROMANIA": "Roemenië",
@@ -1048,6 +1053,7 @@
 	"SALESFORCE": "Salesforce",
 	"sap": "SAP",
 	"SAP": "SAP",
+	"SAVE": "Opslaan",
 	"saved-candidate-no-longer-available": "Kandidaat niet langer beschikbaar",
 	"saved-candidate-search-queries": "Zoektochten",
 	"saved-qry-btn-create": "Maken",
