--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -779,6 +779,7 @@
 	"AVIATION": "Aviation",
 	"BA": "Business Analyst",
 	"BA_SHORT": "BA",
+	"BACK": "Back",
 	"BELGIUM": "Belgium",
 	"BENELUX": "Benelux",
 	"BRITISH_ISLES": "British Isles",
@@ -790,6 +791,7 @@
 	"ccplusplus": "C/C++",
 	"CCPLUSPLUS": "C/C++",
 	"CENTRAL_EUROPE": "Central Europe",
+	"CLOSE": "Close",
 	"cobol": "COBOL",
 	"COBOL": "COBOL",
 	"confirm-box-header": "Confirm",
@@ -969,6 +971,7 @@
 	"NORTHERN_IRELAND": "Northern Ireland",
 	"NORWAY": "Norway",
 	"NORWEGEN": "Norwegen",
+	"NOTIFICATIONS": "Notifications",
 	"ONE_MONTH_SUBSCRIPTION": "1 Month",
 	"PAKISTAN": "Pakistan",
 	"php": "PHP",
@@ -1035,6 +1038,8 @@
 	"register-recruiter-failure-title": "Failure",
 	"register-recruiter-success": "Your request has been submitted. Once accepted an email will be sent with your login details.",
 	"register-recruiter-success-title": "Success",
+	"REPLIES": "Replies",
+	"REPLY": "Reply",
 	"REPUBLIC_OF_IRELAND": "Ireland",
 	"RETAIL": "Retail",
 	"ROMANIA": "Romania",
@@ -1048,6 +1053,7 @@
 	"SALESFORCE": "Salesforce",
 	"sap": "SAP",
 	"SAP": "SAP",
+	"SAVE": "Save",
 	"saved-candidate-no-longer-available": "Candidate No Longer Available",
 	"saved-candidate-search-queries": "Searches",
 	"saved-qry-btn-create": "Create",
