pricing and address change

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -104,6 +104,7 @@
 	"arenella-app-menu-mp": "Marktplatz",
 	"arenella-app-menu-new": "Neu",
 	"arenella-app-menu-news-feed": "Neuigkeiten",
+	"arenella-app-menu-pricing": "Preise",
 	"arenella-app-menu-profile": "Profil",
 	"arenella-app-menu-recruiter-signup": "Anmeldung als Recruiter",
 	"arenella-app-menu-statistics": "Statistiken",
@@ -120,6 +121,7 @@
 	"arenella-contact-company-name": "Name",
 	"arenella-contact-company-registration-email": "Email",
 	"arenella-contact-company-registration-number": "Umsatzsteuer-ID",
+	"arenella-contact-pricing": "Preise",
 	"arenella-contact-title": "Kontakt",
 	"arenella-create-candidate-additional-info-text": "Durch die Angabe dieser optionalen Zusatzinformationen können Sie Ihr Profil\nfür Personalvermittler hervorheben.",
 	"arenella-create-candidate-additional-info-title": "Weitere Informationen",
@@ -981,6 +983,23 @@
 	"POLISH": "Polieren",
 	"PORTUGAL": "Portugal",
 	"PORTUGUESE": "Portugiesisch",
+	"pricing-access-available-candidates": "Verfügbare",
+	"pricing-access-unavailable-candidates": "Nicht verfügbare",
+	"pricing-candidate-types": "Kandidatentypen",
+	"pricing-cv-downloads": "CV Downloads",
+	"pricing-euros-per-month": "€ pro monat",
+	"pricing-free-tier": "Free Tier",
+	"pricing-im": "Chat",
+	"pricing-jobboard": "Job board",
+	"pricing-jobboard-posts": "Posts",
+	"pricing-marketplace": "Marktplatz",
+	"pricing-marketplace-posts": "Posts",
+	"pricing-marketplace-replies": "Antworten",
+	"pricing-newsfeed": "Newsfeed",
+	"pricing-paid-tier": "Paid Tier",
+	"pricing-per-week": "pro Woche",
+	"pricing-unlimited": "Unbegrenzt",
+	"pricing-vat": "* Preise pro Personalvermittler und zuzüglich Mehrwertsteuer, sofern zutreffend.",
 	"product-owner": "Product Owner",
 	"PRODUCT_OWNER": "Product Owner",
 	"PROGRAMME_MANAGER": "Programme Manager",
