--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -104,6 +104,7 @@
 	"arenella-app-menu-mp": "Marketplace",
 	"arenella-app-menu-new": "New",
 	"arenella-app-menu-news-feed": "News Feed",
+	"arenella-app-menu-pricing": "Pricing",
 	"arenella-app-menu-profile": "Profile",
 	"arenella-app-menu-recruiter-signup": "Recruiter Signup",
 	"arenella-app-menu-statistics": "Statistics",
@@ -120,6 +121,7 @@
 	"arenella-contact-company-name": "Name",
 	"arenella-contact-company-registration-email": "Email",
 	"arenella-contact-company-registration-number": "VAT Number",
+	"arenella-contact-pricing": "Pricing",
 	"arenella-contact-title": "Contact",
 	"arenella-create-candidate-additional-info-text": "By providing this optional additional information you will help to make your profile\n\t\t\t\t\t\t\t\tstand out to the recruiters",
 	"arenella-create-candidate-additional-info-title": "Additional Information",
@@ -981,6 +983,23 @@
 	"POLISH": "Polish",
 	"PORTUGAL": "Portugal",
 	"PORTUGUESE": "Portuguese",
+	"pricing-access-available-candidates": "Available",
+	"pricing-access-unavailable-candidates": "Unavailable",
+	"pricing-candidate-types": "Candidate Types",
+	"pricing-cv-downloads": "CV Downloads",
+	"pricing-euros-per-month": "€ per month",
+	"pricing-free-tier": "Free Tier",
+	"pricing-im": "Chat",
+	"pricing-jobboard": "Job board",
+	"pricing-jobboard-posts": "Posts",
+	"pricing-marketplace": "Marketplace",
+	"pricing-marketplace-posts": "Posts",
+	"pricing-marketplace-replies": "Replies",
+	"pricing-newsfeed": "Newsfeed",
+	"pricing-paid-tier": "Paid Tier",
+	"pricing-per-week": "per week",
+	"pricing-unlimited": "Unlimited",
+	"pricing-vat": "* Prices per recruiter and subject to VAT where applicable.",
 	"product-owner": "Product Owner",
 	"PRODUCT_OWNER": "Product Owner",
 	"PROGRAMME_MANAGER": "Programme Manager",
