--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -104,6 +104,7 @@
 	"arenella-app-menu-mp": "Mercado",
 	"arenella-app-menu-new": "Nuevo",
 	"arenella-app-menu-news-feed": "Noticias",
+	"arenella-app-menu-pricing": "Precios",
 	"arenella-app-menu-profile": "Perfil",
 	"arenella-app-menu-recruiter-signup": "Registro de reclutador",
 	"arenella-app-menu-statistics": "Estadísticas",
@@ -120,6 +121,7 @@
 	"arenella-contact-company-name": "Nombre",
 	"arenella-contact-company-registration-email": "Correo electrónico",
 	"arenella-contact-company-registration-number": "Número de IVA",
+	"arenella-contact-pricing": "Precios",
 	"arenella-contact-title": "CONTACTO",
 	"arenella-create-candidate-additional-info-text": "Al proporcionar esta información adicional opcional, ayudarás a crear tu perfil.\ndestacar ante los reclutadores",
 	"arenella-create-candidate-additional-info-title": "Información adicional",
@@ -981,6 +983,23 @@
 	"POLISH": "Polaco",
 	"PORTUGAL": "Portugal",
 	"PORTUGUESE": "Portugués",
+	"pricing-access-available-candidates": "Disponibles",
+	"pricing-access-unavailable-candidates": "No disponibles",
+	"pricing-candidate-types": "Tipos de candidatos",
+	"pricing-cv-downloads": "Descargas de CV",
+	"pricing-euros-per-month": "€ par mois",
+	"pricing-free-tier": "Free Tier",
+	"pricing-im": "Chat",
+	"pricing-jobboard": "Job board",
+	"pricing-jobboard-posts": "Posts",
+	"pricing-marketplace": "Mercado",
+	"pricing-marketplace-posts": "Posts",
+	"pricing-marketplace-replies": "Respuestas",
+	"pricing-newsfeed": "Newsfeed",
+	"pricing-paid-tier": "Paid Tier",
+	"pricing-per-week": "por semana",
+	"pricing-unlimited": "Ilimitado",
+	"pricing-vat": "* Precios por reclutador y sujetos a IVA donde corresponda.",
 	"product-owner": "Product Owner",
 	"PRODUCT_OWNER": "Product Owner",
 	"PROGRAMME_MANAGER": "Programme Manager",
