--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -104,6 +104,7 @@
 	"arenella-app-menu-mp": "Marché",
 	"arenella-app-menu-new": "Nouveau",
 	"arenella-app-menu-news-feed": "Nouvelles",
+	"arenella-app-menu-pricing": "Tarifs",
 	"arenella-app-menu-profile": "Profil",
 	"arenella-app-menu-recruiter-signup": "Inscription Recruteur",
 	"arenella-app-menu-statistics": "Statistiques",
@@ -120,6 +121,7 @@
 	"arenella-contact-company-name": "Nom",
 	"arenella-contact-company-registration-email": "E-mail",
 	"arenella-contact-company-registration-number": "Numéro de TVA",
+	"arenella-contact-pricing": "Tarifs",
 	"arenella-contact-title": "Contact",
 	"arenella-create-candidate-additional-info-text": "En fournissant ces informations complémentaires facultatives, vous contribuerez à vous démarquez auprès des recruteurs.",
 	"arenella-create-candidate-additional-info-title": "Informations Complémentaires",
@@ -981,6 +983,23 @@
 	"POLISH": "Polonais",
 	"PORTUGAL": "Le Portugal",
 	"PORTUGUESE": "Portugais",
+	"pricing-access-available-candidates": "Disponibles",
+	"pricing-access-unavailable-candidates": "Indisponibles",
+	"pricing-candidate-types": "Types de candidats",
+	"pricing-cv-downloads": "Téléchargements - CV",
+	"pricing-euros-per-month": "€ par mois",
+	"pricing-free-tier": "Free Tier",
+	"pricing-im": "Chat",
+	"pricing-jobboard": "Emplois",
+	"pricing-jobboard-posts": "Posts",
+	"pricing-marketplace": "Marché",
+	"pricing-marketplace-posts": "Posts",
+	"pricing-marketplace-replies": "Réponses",
+	"pricing-newsfeed": "Newsfeed",
+	"pricing-paid-tier": "Paid Tier",
+	"pricing-per-week": "par semaine",
+	"pricing-unlimited": "Illimité",
+	"pricing-vat": "* Prix par recruteur et soumis à la TVA le cas échéant.",
 	"product-owner": "Product Owner",
 	"PRODUCT_OWNER": "Product Owner",
 	"PROGRAMME_MANAGER": "Programme Manager",
