--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -104,6 +104,7 @@
 	"arenella-app-menu-mp": "Mercato",
 	"arenella-app-menu-new": "Nuovo",
 	"arenella-app-menu-news-feed": "Feed di notizie",
+	"arenella-app-menu-pricing": "Prezzi",
 	"arenella-app-menu-profile": "Profilo",
 	"arenella-app-menu-recruiter-signup": "Registrazione - reclutatore",
 	"arenella-app-menu-statistics": "Statistiche",
@@ -120,6 +121,7 @@
 	"arenella-contact-company-name": "Nome",
 	"arenella-contact-company-registration-email": "E-mail",
 	"arenella-contact-company-registration-number": "Partitia IVA",
+	"arenella-contact-pricing": "Prezzi",
 	"arenella-contact-title": "Contatto",
 	"arenella-create-candidate-additional-info-text": "Fornendo queste informazioni aggiuntive facoltative contribuirai a creare il tuo profilo\ndistinguersi dai reclutatori",
 	"arenella-create-candidate-additional-info-title": "Informazioni aggiuntive",
@@ -981,6 +983,23 @@
 	"POLISH": "Polacco",
 	"PORTUGAL": "Portogallo",
 	"PORTUGUESE": "Portoghese",
+	"pricing-access-available-candidates": "Disponibili",
+	"pricing-access-unavailable-candidates": "Non disponibili",
+	"pricing-candidate-types": "Tipi di candidati",
+	"pricing-cv-downloads": "Download CV",
+	"pricing-euros-per-month": "€ al mese",
+	"pricing-free-tier": "Free Tier",
+	"pricing-im": "Chat",
+	"pricing-jobboard": "Job board",
+	"pricing-jobboard-posts": "Posts",
+	"pricing-marketplace": "Mercato",
+	"pricing-marketplace-posts": "Posts",
+	"pricing-marketplace-replies": "Risposte",
+	"pricing-newsfeed": "Newsfeed",
+	"pricing-paid-tier": "Paid Tier",
+	"pricing-per-week": "a settimana",
+	"pricing-unlimited": "Illimitato",
+	"pricing-vat": "* Prezzi per reclutatore e soggetti ad IVA ove applicabile.",
 	"product-owner": "Product Owner",
 	"PRODUCT_OWNER": "Product Owner",
 	"PROGRAMME_MANAGER": "Programme Manager",
