--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -104,6 +104,7 @@
 	"arenella-app-menu-mp": "Marktplaats",
 	"arenella-app-menu-new": "Nieuwe",
 	"arenella-app-menu-news-feed": "Nieuwsfeed",
+	"arenella-app-menu-pricing": "Prijzen",
 	"arenella-app-menu-profile": "Profiel",
 	"arenella-app-menu-recruiter-signup": "Recruiter registratie",
 	"arenella-app-menu-statistics": "Statistieken",
@@ -120,6 +121,7 @@
 	"arenella-contact-company-name": "Naam",
 	"arenella-contact-company-registration-email": "E-mail",
 	"arenella-contact-company-registration-number": "BTW-nummer",
+	"arenella-contact-pricing": "Prijzen",
 	"arenella-contact-title": "Contact",
 	"arenella-create-candidate-additional-info-text": "Door deze optionele aanvullende informatie te verstrekken, laat u uw profiel extra opvallen voor de recruiters",
 	"arenella-create-candidate-additional-info-title": "Extra informatie",
@@ -981,6 +983,23 @@
 	"POLISH": "Pools",
 	"PORTUGAL": "Portugal",
 	"PORTUGUESE": "Portugees",
+	"pricing-access-available-candidates": "Beschikbare",
+	"pricing-access-unavailable-candidates": "Niet-beschikbare",
+	"pricing-candidate-types": "Kandidaattypen",
+	"pricing-cv-downloads": "CV-downloads",
+	"pricing-euros-per-month": "€ per maand",
+	"pricing-free-tier": "Free Tier",
+	"pricing-im": "Chat",
+	"pricing-jobboard": "Banen",
+	"pricing-jobboard-posts": "Posts",
+	"pricing-marketplace": "Marktplaats",
+	"pricing-marketplace-posts": "Posts",
+	"pricing-marketplace-replies": "Antwoorden",
+	"pricing-newsfeed": "Newsfeed",
+	"pricing-paid-tier": "Paid Tier",
+	"pricing-per-week": "per week",
+	"pricing-unlimited": "Onbeperkt",
+	"pricing-vat": "* Prijzen per recruiter en exclusief btw, indien van toepassing.",
 	"product-owner": "Product Owner",
 	"PRODUCT_OWNER": "Product Owner",
 	"PROGRAMME_MANAGER": "Programme Manager",
